src/Skia/Bindings/Gr_context.hs


@
const gr_glinterface_t *gr_glinterface_assemble_webgl_interface(void *ctx, gr_gl_get_proc get)
@
-}
foreign import ccall "gr_glinterface_assemble_webgl_interface" gr_glinterface_assemble_webgl_interface ::
  Ptr (()) -- ^ C argument @"void * ctx"@
  -> FunPtr Gr_gl_get_proc -- ^ C argument @"gr_gl_get_proc get"@
  -> IO (Ptr (Gr_glinterface)) -- ^ C return type: @"const gr_glinterface_t *"@

-- | Function pointer to 'gr_glinterface_assemble_webgl_interface'
foreign import ccall "&gr_glinterface_assemble_webgl_interface" p'gr_glinterface_assemble_webgl_interface ::
  FunPtr (Ptr (()) -> FunPtr Gr_gl_get_proc -> IO (Ptr (Gr_glinterface)))

{- | C function signature:

@
void gr_glinterface_unref(const gr_glinterface_t *glInterface)
@
-}
foreign import ccall "gr_glinterface_unref" gr_glinterface_unref ::
  Ptr (Gr_glinterface) -- ^ C argument @"const gr_glinterface_t * glInterface"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'gr_glinterface_unref'
foreign import ccall "&gr_glinterface_unref" p'gr_glinterface_unref ::
  FunPtr (Ptr (Gr_glinterface) -> IO (()))

{- | C function signature:

@
_Bool gr_glinterface_validate(const gr_glinterface_t *glInterface)
@
-}
foreign import ccall "gr_glinterface_validate" gr_glinterface_validate ::
  Ptr (Gr_glinterface) -- ^ C argument @"const gr_glinterface_t * glInterface"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'gr_glinterface_validate'
foreign import ccall "&gr_glinterface_validate" p'gr_glinterface_validate ::
  FunPtr (Ptr (Gr_glinterface) -> IO (CBool))

{- | C function signature:

@
_Bool gr_glinterface_has_extension(const gr_glinterface_t *glInterface, const char *extension)
@
-}
foreign import ccall "gr_glinterface_has_extension" gr_glinterface_has_extension ::
  Ptr (Gr_glinterface) -- ^ C argument @"const gr_glinterface_t * glInterface"@
  -> Ptr (CChar) -- ^ C argument @"const char * extension"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'gr_glinterface_has_extension'
foreign import ccall "&gr_glinterface_has_extension" p'gr_glinterface_has_extension ::
  FunPtr (Ptr (Gr_glinterface) -> Ptr (CChar) -> IO (CBool))

{- | C function signature:

@
gr_vk_extensions_t *gr_vk_extensions_new(void)
@
-}
foreign import ccall "gr_vk_extensions_new" gr_vk_extensions_new ::
  IO (Ptr (Gr_vk_extensions)) -- ^ C return type: @"gr_vk_extensions_t *"@

-- | Function pointer to 'gr_vk_extensions_new'
foreign import ccall "&gr_vk_extensions_new" p'gr_vk_extensions_new ::
  FunPtr (IO (Ptr (Gr_vk_extensions)))

{- | C function signature:

@
void gr_vk_extensions_delete(gr_vk_extensions_t *extensions)
@
-}
foreign import ccall "gr_vk_extensions_delete" gr_vk_extensions_delete ::
  Ptr (Gr_vk_extensions) -- ^ C argument @"gr_vk_extensions_t * extensions"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'gr_vk_extensions_delete'
foreign import ccall "&gr_vk_extensions_delete" p'gr_vk_extensions_delete ::
  FunPtr (Ptr (Gr_vk_extensions) -> IO (()))

{- | C function signature:

@
void gr_vk_extensions_init(gr_vk_extensions_t *extensions, gr_vk_get_proc getProc, void *userData, vk_instance_t *instance, vk_physical_device_t *physDev, uint32_t instanceExtensionCount, const char **instanceExtensions, uint32_t deviceExtensionCount, const char **deviceExtensions)
@
-}
foreign import ccall "gr_vk_extensions_init" gr_vk_extensions_init ::
  Ptr (Gr_vk_extensions) -- ^ C argument @"gr_vk_extensions_t * extensions"@
  -> FunPtr Gr_vk_get_proc -- ^ C argument @"gr_vk_get_proc getProc"@
  -> Ptr (()) -- ^ C argument @"void * userData"@
  -> Ptr (Vk_instance) -- ^ C argument @"vk_instance_t * instance"@
  -> Ptr (Vk_physical_device) -- ^ C argument @"vk_physical_device_t * physDev"@
  -> Word32 -- ^ C argument @"uint32_t instanceExtensionCount"@
  -> Ptr (Ptr (CChar)) -- ^ C argument @"const char ** instanceExtensions"@
  -> Word32 -- ^ C argument @"uint32_t deviceExtensionCount"@
  -> Ptr (Ptr (CChar)) -- ^ C argument @"const char ** deviceExtensions"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'gr_vk_extensions_init'
foreign import ccall "&gr_vk_extensions_init" p'gr_vk_extensions_init ::
  FunPtr (Ptr (Gr_vk_extensions) -> FunPtr Gr_vk_get_proc -> Ptr (()) -> Ptr (Vk_instance) -> Ptr (Vk_physical_device) -> Word32 -> Ptr (Ptr (CChar)) -> Word32 -> Ptr (Ptr (CChar)) -> IO (()))

{- | C function signature:

@
_Bool gr_vk_extensions_has_extension(gr_vk_extensions_t *extensions, const char *ext, uint32_t minVersion)
@
-}
foreign import ccall "gr_vk_extensions_has_extension" gr_vk_extensions_has_extension ::
  Ptr (Gr_vk_extensions) -- ^ C argument @"gr_vk_extensions_t * extensions"@
  -> Ptr (CChar) -- ^ C argument @"const char * ext"@
  -> Word32 -- ^ C argument @"uint32_t minVersion"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'gr_vk_extensions_has_extension'
foreign import ccall "&gr_vk_extensions_has_extension" p'gr_vk_extensions_has_extension ::
  FunPtr (Ptr (Gr_vk_extensions) -> Ptr (CChar) -> Word32 -> IO (CBool))

{- | C function signature:

@
gr_backendtexture_t *gr_backendtexture_new_gl(int width, int height, _Bool mipmapped, const gr_gl_textureinfo_t *glInfo)
@
-}
foreign import ccall "gr_backendtexture_new_gl" gr_backendtexture_new_gl ::
  CInt -- ^ C argument @"int width"@
  -> CInt -- ^ C argument @"int height"@
  -> CBool -- ^ C argument @"_Bool mipmapped"@
  -> Ptr (Gr_gl_textureinfo) -- ^ C argument @"const gr_gl_textureinfo_t * glInfo"@
  -> IO (Ptr (Gr_backendtexture)) -- ^ C return type: @"gr_backendtexture_t *"@

-- | Function pointer to 'gr_backendtexture_new_gl'
foreign import ccall "&gr_backendtexture_new_gl" p'gr_backendtexture_new_gl ::
  FunPtr (CInt -> CInt -> CBool -> Ptr (Gr_gl_textureinfo) -> IO (Ptr (Gr_backendtexture)))

{- | C function signature:

@
gr_backendtexture_t *gr_backendtexture_new_vulkan(int width, int height, const gr_vk_imageinfo_t *vkInfo)
@
-}
foreign import ccall "gr_backendtexture_new_vulkan" gr_backendtexture_new_vulkan ::
  CInt -- ^ C argument @"int width"@
  -> CInt -- ^ C argument @"int height"@
  -> Ptr (Gr_vk_imageinfo) -- ^ C argument @"const gr_vk_imageinfo_t * vkInfo"@
  -> IO (Ptr (Gr_backendtexture)) -- ^ C return type: @"gr_backendtexture_t *"@

-- | Function pointer to 'gr_backendtexture_new_vulkan'
foreign import ccall "&gr_backendtexture_new_vulkan" p'gr_backendtexture_new_vulkan ::
  FunPtr (CInt -> CInt -> Ptr (Gr_vk_imageinfo) -> IO (Ptr (Gr_backendtexture)))

{- | C function signature:

@
gr_backendtexture_t *gr_backendtexture_new_metal(int width, int height, _Bool mipmapped, const gr_mtl_textureinfo_t *mtlInfo)
@
-}
foreign import ccall "gr_backendtexture_new_metal" gr_backendtexture_new_metal ::
  CInt -- ^ C argument @"int width"@
  -> CInt -- ^ C argument @"int height"@
  -> CBool -- ^ C argument @"_Bool mipmapped"@
  -> Ptr (Gr_mtl_textureinfo) -- ^ C argument @"const gr_mtl_textureinfo_t * mtlInfo"@
  -> IO (Ptr (Gr_backendtexture)) -- ^ C return type: @"gr_backendtexture_t *"@

-- | Function pointer to 'gr_backendtexture_new_metal'
foreign import ccall "&gr_backendtexture_new_metal" p'gr_backendtexture_new_metal ::
  FunPtr (CInt -> CInt -> CBool -> Ptr (Gr_mtl_textureinfo) -> IO (Ptr (Gr_backendtexture)))

{- | C function signature:

@
gr_backendtexture_t *gr_backendtexture_new_direct3d(int width, int height, const gr_d3d_textureresourceinfo_t *d3dInfo)
@
-}
foreign import ccall "gr_backendtexture_new_direct3d" gr_backendtexture_new_direct3d ::
  CInt -- ^ C argument @"int width"@
  -> CInt -- ^ C argument @"int height"@
  -> Ptr (Gr_d3d_textureresourceinfo) -- ^ C argument @"const gr_d3d_textureresourceinfo_t * d3dInfo"@
  -> IO (Ptr (Gr_backendtexture)) -- ^ C return type: @"gr_backendtexture_t *"@

-- | Function pointer to 'gr_backendtexture_new_direct3d'
foreign import ccall "&gr_backendtexture_new_direct3d" p'gr_backendtexture_new_direct3d ::
  FunPtr (CInt -> CInt -> Ptr (Gr_d3d_textureresourceinfo) -> IO (Ptr (Gr_backendtexture)))

{- | C function signature:

@
void gr_backendtexture_delete(gr_backendtexture_t *texture)
@
-}
foreign import ccall "gr_backendtexture_delete" gr_backendtexture_delete ::
  Ptr (Gr_backendtexture) -- ^ C argument @"gr_backendtexture_t * texture"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'gr_backendtexture_delete'
foreign import ccall "&gr_backendtexture_delete" p'gr_backendtexture_delete ::
  FunPtr (Ptr (Gr_backendtexture) -> IO (()))

{- | C function signature:

@
_Bool gr_backendtexture_is_valid(const gr_backendtexture_t *texture)
@
-}
foreign import ccall "gr_backendtexture_is_valid" gr_backendtexture_is_valid ::
  Ptr (Gr_backendtexture) -- ^ C argument @"const gr_backendtexture_t * texture"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'gr_backendtexture_is_valid'
foreign import ccall "&gr_backendtexture_is_valid" p'gr_backendtexture_is_valid ::
  FunPtr (Ptr (Gr_backendtexture) -> IO (CBool))

{- | C function signature:

@
int gr_backendtexture_get_width(const gr_backendtexture_t *texture)
@
-}
foreign import ccall "gr_backendtexture_get_width" gr_backendtexture_get_width ::
  Ptr (Gr_backendtexture) -- ^ C argument @"const gr_backendtexture_t * texture"@
  -> IO (CInt) -- ^ C return type: @"int"@

-- | Function pointer to 'gr_backendtexture_get_width'
foreign import ccall "&gr_backendtexture_get_width" p'gr_backendtexture_get_width ::
  FunPtr (Ptr (Gr_backendtexture) -> IO (CInt))

{- | C function signature:

@
int gr_backendtexture_get_height(const gr_backendtexture_t *texture)
@
-}
foreign import ccall "gr_backendtexture_get_height" gr_backendtexture_get_height ::
  Ptr (Gr_backendtexture) -- ^ C argument @"const gr_backendtexture_t * texture"@
  -> IO (CInt) -- ^ C return type: @"int"@

-- | Function pointer to 'gr_backendtexture_get_height'
foreign import ccall "&gr_backendtexture_get_height" p'gr_backendtexture_get_height ::
  FunPtr (Ptr (Gr_backendtexture) -> IO (CInt))

{- | C function signature:

@
_Bool gr_backendtexture_has_mipmaps(const gr_backendtexture_t *texture)
@
-}
foreign import ccall "gr_backendtexture_has_mipmaps" gr_backendtexture_has_mipmaps ::
  Ptr (Gr_backendtexture) -- ^ C argument @"const gr_backendtexture_t * texture"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'gr_backendtexture_has_mipmaps'
foreign import ccall "&gr_backendtexture_has_mipmaps" p'gr_backendtexture_has_mipmaps ::
  FunPtr (Ptr (Gr_backendtexture) -> IO (CBool))

{- | C function signature:

@
gr_backend_t gr_backendtexture_get_backend(const gr_backendtexture_t *texture)
@
-}
foreign import ccall "gr_backendtexture_get_backend" gr_backendtexture_get_backend ::
  Ptr (Gr_backendtexture) -- ^ C argument @"const gr_backendtexture_t * texture"@
  -> IO (Gr_backend) -- ^ C return type: @"gr_backend_t"@

-- | Function pointer to 'gr_backendtexture_get_backend'
foreign import ccall "&gr_backendtexture_get_backend" p'gr_backendtexture_get_backend ::
  FunPtr (Ptr (Gr_backendtexture) -> IO (Gr_backend))

{- | C function signature:

@
_Bool gr_backendtexture_get_gl_textureinfo(const gr_backendtexture_t *texture, gr_gl_textureinfo_t *glInfo)
@
-}
foreign import ccall "gr_backendtexture_get_gl_textureinfo" gr_backendtexture_get_gl_textureinfo ::
  Ptr (Gr_backendtexture) -- ^ C argument @"const gr_backendtexture_t * texture"@
  -> Ptr (Gr_gl_textureinfo) -- ^ C argument @"gr_gl_textureinfo_t * glInfo"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'gr_backendtexture_get_gl_textureinfo'
foreign import ccall "&gr_backendtexture_get_gl_textureinfo" p'gr_backendtexture_get_gl_textureinfo ::
  FunPtr (Ptr (Gr_backendtexture) -> Ptr (Gr_gl_textureinfo) -> IO (CBool))

{- | C function signature:
